Performance optimizations, new project added, spelling corrections, removed typed font on some headers for better mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d7d5da" />
+
+    <link rel="preload" href="./projects/bcmc.jpg" as="image" />
+    <link rel="preload" href="./projects/imgMagic.gif" as="image" />
+
     <meta
       name="description"
       content="Ceponis Resume Webapp"
